// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer test suite: dataCy 1`] = `
<div
  data-cy="custom"
  style={
    {
      "display": "block",
      "height": 0,
      "width": "8px",
    }
  }
/>
`;

exports[`Spacer test suite: default 1`] = `
<div
  data-cy="spacer"
  style={
    {
      "display": "block",
      "height": 0,
      "width": "8px",
    }
  }
/>
`;

exports[`Spacer test suite: direction 1`] = `
<div
  data-cy="spacer"
  style={
    {
      "display": "block",
      "height": "8px",
      "width": 0,
    }
  }
/>
`;

exports[`Spacer test suite: level 1`] = `
<div
  data-cy="spacer"
  style={
    {
      "display": "block",
      "height": 0,
      "width": "16px",
    }
  }
/>
`;
